# ThumbyP8

./: .gitignore  CMakeLists.txt  COMPATIBILITY.md  README.md  firmware.uf2  firmware_p8.uf2
carts/: test1.p8  test1_frame60.ppm
carts/device_output/: 15133.p8  age_of_ants-9.luac  age_of_ants-9.p8  beam4-2.luac  beam4-2.p8  delunky102-0.p8  digger-2.p8  dominion_ex-4.p8  flipknight-0.p8  fromrust_a-4.luac  fromrust_a-4.p8  fsgupicozombiegarden121-0.luac  fsgupicozombiegarden121-0.p8  kalikan_menu-6.p8  lootslime-1.p8  mossmoss-12.p8  mot_pool-23.p8  pck404_512px_under-1.p8  phoenix08-0.p8  pico_arcade-2.p8  picovalley-2.luac  picovalley-2.p8  poom_0-9.p8  province-4.luac  province-4.p8  rtype-5.luac  rtype-5.p8  ruwukawisa-0.p8  start_picocraft_1-3.p8  terra_1cart-43.p8  tinygolfpuzzles-1.p8
device/: CMakeLists.txt  embedded_cart.h  p8_buttons.c  p8_buttons.h  p8_cart_flash.c  p8_device_main.c  p8_flash_disk.c  p8_flash_disk.h  p8_lcd_gc9107.c  p8_lcd_gc9107.h  p8_log.c  p8_log.h  p8_menu.c  p8_menu.h  p8_picker.c
lua/: lauxlib.c  ldump.c  llimits.h  lmathlib.c  lparser.c  luaconf.h  lvm.c
src/: bench_main.c  host_main.c  p8.c  p8.h  p8_api.c  p8_api.h  p8_audio.c  p8_cart.c  p8_cart.h  p8_draw.c  p8_draw.h  p8_font.c  p8_input.h  p8_machine.c  p8_machine.h  p8_p8png.c  p8_p8png.h  p8_rewrite.c  p8_shrinko.c  p8_translate.c  p8_translate.h  p8_xip.h
tools/: embed_cart.py  p8png_extract.py  pico8_lua.py  test_full_pipeline.c  test_translate.c
